# AI-society

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_activity_logs.py  README.md
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  auto_expander.py  balance_detector.py  decision.py  generator.py  manager.py  memory.py  models.py  needs.py  perception.py  personality.py  planning.py  reaction.py  reflection.py
backend/app/conversations/: __init__.py  analyzer.py  generator.py  handlers.py  manager.py  models.py
backend/app/core/: __init__.py  agent.py  config.py  events.py  locations.py  world.py
backend/app/database/: __init__.py  connection.py  models.py
backend/app/database/crud/: __init__.py  activity_logs.py  agents.py  conversations.py  memories.py  relationships.py  world_state.py
backend/app/llm/: __init__.py  cache.py  prompts.py  router.py
backend/app/models/: __init__.py
backend/app/routes/: __init__.py  agents.py  conversations.py  data.py  expansion.py  llm.py  locations.py  world.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  embedding.py  memory_service.py  vector_store.py  world_state_service.py
backend/tests/: __init__.py  integration_test.py  integration_test_report.json  test_agents.py  test_api.py  test_config.py  test_conversations.py  test_events.py  test_llm.py  test_locations.py  test_world.py
(+109 files in other folders)
