[tool.poetry]
name = "ai-society-backend"
version = "0.1.0"
description = "AI Society - 自治智能体社会实验平台后端"
authors = ["AI Society Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
# Web框架
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
# 异步支持
httpx = "^0.26.0"
aiohttp = "^3.9.0"
# 数据验证
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
# 数据库
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
# Redis
redis = "^5.0.0"
# 向量数据库
qdrant-client = "^1.7.0"
# LLM
openai = "^1.10.0"  # DeepSeek兼容OpenAI接口
# 定时任务
apscheduler = "^3.10.0"
# 工具
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
# 日志
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
